[project]
name = "bikes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "pydantic>=2.11.4",
    "ruptures>=1.1.9",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bikes"]