[tool.poetry]
name = "m5"
version = "0.1.0"
description = ""
authors = ["Lukas Malms <lukas.malms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
darts = "^0.30.0"
sktime = "^0.33.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
